# govee

./: .dockerignore  .env.example  .env.prod.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
backend/: manage.py
backend/app/: admin.py  govee_ble.py  models.py  settings.py  tests.py  urls.py  views.py
backend/app/management/commands/: read_h5075.py  read_h5075_dump.py  read_h5075_history.py  sync_h5075_history.py
backend/app/migrations/: 0001_initial.py  0002_h5075advertisementsnapshot.py  0003_h5075historicalmeasurement.py  0004_h5075historysyncstate.py  0005_h5075devicealias.py  0006_h5075devicealias_detected_name_and_alias_blank.py
examples/: read_devices.py
frontend/: Dockerfile  index.html  package.json  vite.config.js
frontend/src/: App.css  App.jsx  App.test.jsx  styles.css
frontend/src/components/: AboutSection.jsx  AppDrawer.css  AppDrawer.jsx  AppHeader.css  AppHeader.jsx  DevicesSection.jsx  HistorySection.css  HistorySection.jsx  HistorySection.test.jsx  LoginSection.css  LoginSection.jsx
frontend/src/constants/: menuItems.jsx
frontend/src/hooks/: useAuth.js  useDevicesData.js  useHealthStatus.js  useHistoryData.js
frontend/src/utils/: chart.js
govee/: __init__.py  client.py  exceptions.py  models.py
tests/: test_client.py
